@@ -10,7 +10,7 @@
 PACKAGE              = ttHMultilepton
 
 # the libraries to link with this one:
-PACKAGE_PRELOAD      = 
+PACKAGE_PRELOAD      = PMGTools
 
 # additional compilation flags to pass (not propagated to dependent packages):
 PACKAGE_CXXFLAGS     = -std=c++11
@@ -19,7 +19,7 @@ PACKAGE_CXXFLAGS     = -std=c++11
 PACKAGE_OBJFLAGS     = 
 
 # additional linker flags to pass (for compiling the library):
-PACKAGE_LDFLAGS      = 
+PACKAGE_LDFLAGS      =
 
 # additional linker flags to pass (for compiling binaries):
 PACKAGE_BINFLAGS     = 
@@ -28,7 +28,7 @@ PACKAGE_BINFLAGS     =
 PACKAGE_LIBFLAGS     = 
 
 # the list of packages we depend on:
-PACKAGE_DEP          = TopObjectSelectionTools TopEventSelectionTools TopEvent TopConfiguration TopDataPreparation TopAnalysis TopCorrections TrigDecisionTool MuonSelectorTools xAODEgamma xAODTracking xAODEventInfo xAODTruth IsolationSelection JetSelectorTools PileupReweighting AsgTools AssociationUtils
+PACKAGE_DEP          = TopObjectSelectionTools TopEventSelectionTools TopEvent TopConfiguration TopDataPreparation TopAnalysis TopCorrections TrigDecisionTool MuonSelectorTools xAODEgamma xAODTracking xAODEventInfo xAODTruth IsolationSelection JetSelectorTools PileupReweighting AsgTools AssociationUtils PMGTools
 
 # the list of packages we use if present, but that we can work without :
 PACKAGE_TRYDEP       = 
